# cloud-cost-tracker

./: .env  .gitignore  Dockerfile  Dockerfile.streamlit  debug_train.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  test_api.py  test_correct_url.py  verify_import.py  walkthrough.md.resolved
.github/workflows/: deploy.yml  training.yml
api/: main.py  predictor.py
data/: generate_synthetic_data.py
data/raw/: cloud_cost_data.csv
data/schema/: validation.py
database/: db_manager.py
mlruns/0/: meta.yaml
mlruns/348851111119592642/: meta.yaml
mlruns/348851111119592642/3b9c2930d0224acba84ef2b944f8c5c5/: meta.yaml
mlruns/348851111119592642/3b9c2930d0224acba84ef2b944f8c5c5/metrics/: mae  rmse
mlruns/348851111119592642/3b9c2930d0224acba84ef2b944f8c5c5/tags/: mlflow.runName  mlflow.source.name
mlruns/348851111119592642/76748f8be5264601aba26d5113fe7cee/: meta.yaml
mlruns/348851111119592642/795bb15718d74e2eafcd9b7cfcd329d3/: meta.yaml
mlruns/348851111119592642/d43de32f02bc409a83104b1732489a61/: meta.yaml
mlruns/348851111119592642/e06efebe68fe4cf8b9db1ce98bba9774/: meta.yaml
mlruns/models/cost_prediction_model/: meta.yaml
monitoring/: prometheus.yml
monitoring/drift/: detect.py
scripts/: deploy.sh  setup_postgres.sh  setup_vm.sh
src/evaluation/: evaluator.py
src/features/: preprocessor.py
src/models/: production.py  trainer.py  tuner.py
tests/: test_api.py  test_preprocessor.py
training/: data_loader.py  feature_engineering.py  train.py  train_from_db.py
ui/: app.py  app_old.py
(+41 files in other folders)
