[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "churn-prediction"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["N803", "N806"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["api.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["src.*"]
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = ["pydantic.*", "fastapi.*", "mlflow.*", "xgboost.*", "lightgbm.*", "imblearn.*", "sklearn.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov=api --cov-report=term-missing -v"
